Edited wiki page CompliantApplications through web user interface.

--- a/wiki/CompliantApplications.wiki
+++ b/wiki/CompliantApplications.wiki
@@ -1,4 +1,5 @@
 #summary Applications currently supporting OAL.
+#labels Phase-Support,Featured
 
 ==Applications Supporting OpenAstronomyLog 2.0==
 (in alphabetical order)
