Edited wiki page CompliantApplications through web user interface.

--- a/wiki/CompliantApplications.wiki
+++ b/wiki/CompliantApplications.wiki
@@ -4,10 +4,10 @@
 ==Applications Supporting OpenAstronomyLog 2.0==
 (in alphabetical order)
 
-|| *Name* || *Supported Extensions* || *Supported Operating Systems* || *Supported Languages* || *License Type* ||
-|| DeepskyLog || DeepSky, SolarSystem || Webbrowser || EN, DE, FR, NL || Free ||
-|| Deep-Sky Planner 5 || Imaging || Windows XP, Windows Vista, Windows 7 || EN || Commercial ||
-|| Eye&Telescope 3.1 || DeepSky, SolarSystem || Windows 98SE, Windows NT 4.0, Windows 2000, Windows XP, Windows Vista, Windows 7 || EN, DE || Commercial ||
-|| Observation Manager 0.820 (or higher) || DeepSky, SolarSystem, VariableStars || All Java platforms (All MS Windows, Linux, Mac, Unix, ...) || EN, DE, RU, UK, FR, NL || Free ||
+|| *Name* || *Supported Extensions* || *Supported Operating Systems* || *Supported Languages* || *License Type* || *Web Site* ||
+|| DeepskyLog || DeepSky, SolarSystem || Webbrowser || EN, DE, FR, NL || Free || http://www.deepskylog.org/ ||
+|| Deep-Sky Planner 5 || Imaging || Windows XP, Windows Vista, Windows 7 || EN || Commercial || http://knightware.biz/dsp/ ||
+|| Eye&Telescope 3.1 || DeepSky, SolarSystem || Windows 98SE, Windows NT 4.0, Windows 2000, Windows XP, Windows Vista, Windows 7 || EN, DE || Commercial || http://www.oculum.de/eundt/site/eandt.asp ||
+|| Observation Manager 0.820 (or higher) || DeepSky, SolarSystem, VariableStars || All Java platforms (All MS Windows, Linux, Mac, Unix, ...) || EN, DE, RU, UK, FR, NL || Free || http://observation.sourceforge.net/ ||
 
 For a detailed list of application compatibility, please see OAL Schema compliance.xls in our Downloads section.
