--- a/wiki/CompliantApplications.wiki
+++ b/wiki/CompliantApplications.wiki
@@ -8,6 +8,6 @@
 || DeepskyLog || DeepSky, SolarSystem || Webbrowser || EN, DE, FR, NL || Free || http://www.deepskylog.org/ ||
 || Deep-Sky Planner 5 || Imaging || Windows XP, Windows Vista, Windows 7 || EN || Commercial || http://knightware.biz/dsp/ ||
 || Eye&Telescope 3.1 || DeepSky, SolarSystem || Windows 98SE, Windows NT 4.0, Windows 2000, Windows XP, Windows Vista, Windows 7 || EN, DE || Commercial || http://www.oculum.de/eundt/site/eandt.asp ||
-|| Observation Manager 0.820 (or higher) || DeepSky, SolarSystem, VariableStars || All Java platforms (All MS Windows, Linux, Mac, Unix, ...) || EN, DE, RU, UK, FR, NL, IT, ES, FI || Free || http://observation.sourceforge.net/ ||
+|| Observation Manager 0.820 (or higher) || DeepSky, SolarSystem, Imaging, VariableStars || All Java platforms (All MS Windows, Linux, Mac, Unix, ...) || EN, DE, RU, UK, FR, NL, IT, ES, FI || Free || http://observation.sourceforge.net/ ||
 
 For a detailed list of application compatibility, please see OAL Schema compliance.xls in our Downloads section.
