Edited wiki page CompliantApplications through web user interface.

--- a/wiki/CompliantApplications.wiki
+++ b/wiki/CompliantApplications.wiki
@@ -6,7 +6,7 @@
 
 || *Name* || *Supported Extensions* || *Supported Operating Systems* || *Supported Languages* || *License Type* || *Web Site* ||
 || DeepskyLog || DeepSky, SolarSystem || Webbrowser || EN, DE, FR, NL || Free || http://www.deepskylog.org/ ||
-|| Deep-Sky Planner 6 || Imaging || Windows 8, 7, Vista & XP || EN || Commercial || http://knightware.biz/dsp/ ||
+|| Deep-Sky Planner 6 || DeepSky, SolarSystem, Imaging || Windows 8, 7, Vista & XP || EN || Commercial || http://knightware.biz/dsp/ ||
 || Eye&Telescope 3.1 || DeepSky, SolarSystem || Windows 98SE, Windows NT 4.0, Windows 2000, Windows XP, Windows Vista, Windows 7 || EN, DE || Commercial || http://www.oculum.de/eundt/site/eandt.asp ||
 || Observation Manager 0.820 (or higher) || DeepSky, SolarSystem, Imaging, VariableStars || All Java platforms (All MS Windows, Linux, Mac, Unix, ...) || EN, DE, RU, UK, FR, NL, IT, ES, FI || Free || http://observation.sourceforge.net/ ||
 
